<resources>
    <string name="app_name">PFApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">PFApp</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_liste_projet">Liste des projets</string>
    <string name="menu_mes_projet">Mes Projets</string>
    <string name="menu_mes_jurys">Mes Jurys</string>
    <string name="menu_agenda">Agenda</string>
    <string name="menu_plan">Plan</string>
    <string name="menu_accueil">Accueil</string>
    <string name="menu_send">Deconnexion</string>
    <string name="name">Username</string>
    <string name="connect">Connect</string>
    <string name="visit">Visiteur</string>
    <string name="password">Password</string>
    <string name="eseo">ESEO</string>
    <string name="titre_poster">Posters en attentes :</string>
    <string name="titre_agenda">Agenda :</string>
    <string name="error_credentials">Error Credentials</string>
    <string name="error_credentials_explication">Credentials that have been entered are wrong. Please check out.</string>
</resources>
